// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Serve Runtime Defaults falls back to "./supergraph.graphql" by default: default-supergraph 1`] = `
"type Query {
  foo: String
}"
`;

exports[`Serve Runtime Hive CDN respects env vars: hive-cdn 1`] = `
"type Query {
  foo: String
}

type Subscription {
  pull: String
  neverEmits: String
}"
`;
